--- a/00.book.tex
+++ b/00.book.tex
@@ -50,9 +50,9 @@
 
 %\input{./01.title.tex}
 \begin{center}
-{\large PROPOSAL STUDI KELAYAKAN PENGOLAHAN DATA SISTEM BEA PEROLEHAN HAK ATAS TANAH DAN/ATAU BANGUNAN}
+{\large STUDI KELAYAKAN PENDAHULUAN PENGOLAHAN DATA SISTEM BEA PEROLEHAN HAK ATAS TANAH DAN/ATAU BANGUNAN}
 \\[1cm]
-12 Maret 2016\\
+14 Maret 2016\\
 Priyanto Tamami, S.Kom.
 \end{center}
 
@@ -87,33 +87,17 @@ Priyanto Tamami, S.Kom.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\section{LATAR BELAKANG MASALAH}
+\section{PENENTUAN MASALAH DAN PELUANG YANG DITUJU SISTEM}
 
-Setelah dilakukannya peralihan beberapa jenis pajak dari pusat ke daerah, maka daerah dituntut untuk lebih mandiri dalam penguatan atau peningkatan pendapatan asli daerah dari sisi pajak.
 
-Beberapa alasan terjadinya pengalihan ini diantaranya yaitu :
+\section{PEMBENTUKAN SASARAN SISTEM BARU SECARA KESELURUHAN}
 
-\begin{enumerate}[1.]
-  \item Memperluas objek pajak daerah dan retribusi daerah
-  \item Menambah jenis pajak daerah dan retribusi daerah (termasuk diantaranya pengalihan PBB dan BPHTB menjadi pajak daerah)
-  \item Memberikan diskresi penetapan tarif pajak kepada daerah
-  \item Menyerahkan fungsi pajak sebagai instrumen penganggaran dan pengaturan pada daerah.
-\end{enumerate}
 
-Dari hal tersebut diatas maka diperlukan studi kelayakan apakah sebuah sistem informasi perlu dibangun dalam rangka tertib administrasi Bea Perolehan Hak Atas Tanah dan/atau Bangunan di Pemerintah Daerah Kabupaten Brebes.  
+\section{PENGIDENTIFIKASIAN PARA PEMAKAI SISTEM}
 
-\section{MAKSUD DAN TUJUAN}
 
-Maksud dan tujuan yang akan dicapai dalam kegiatan studi kelayakan ini yaitu menganalisa apakah aplikasi yang akan dikembangkan nantinya layak untuk dipublikasikan dan digunakan sebagai alat untuk melakukan administrasi pelayanan Bea Perolehan Hak atas Tanah dan Bangunan.
+\section{PEMBENTUKAN LINGKUP SISTEM}
 
-\section{BATASAN MASALAH}
-
-Karena luasnya ruang lingkup dalam pembahasan studi kelayakan ini, maka penyusunan studi kelayakan akan diberikan batasan masalah bahwa Studi kelayakan ini melihat dari kebutuhan organisasi dalam hal ini instansi pemerintah terhadap suatu aplikasi berbasis web sebagai sarana melakukan pencatatan administrasi.
-
-\section{PERENCANAAN TARGET}
-
-Target yang akan dicapai dari studi kelayakan ini akan melihat apakah kebutuhan pembuatan aplikasi web sebagai sarana pencatatan administrasi Bea Perolehan Hak atas Tanah dan Bangunan mampu menggantikan pencatatan manual yang dilakukan dengan sarana aplikasi \textit{Office} yang biasa digunakan.
-%Target yang akan dicapai dari studi kelayakan ini melihat bahwa apakah kebutuhan pembuatan aplikasi web yang akan menampilkan informasi mengenai status pembayaran Surat Pemberitahuan Pajak Terhutang untuk jenis Pajak Bumi dan Bangunan Perdesaan dan Perkotaan, selain sebagai bentuk keterbukaan informasi kepada wajib pajak sekaligus sebagai kontrol terhadap petugas pemungut tingkat Desa/Kelurahan dalam menyalurkan realisasi penerimaan Pajak Bumi dan Bangunan Perdesaan dan Perkotaan dari wajib pajak atau kuasanya ke Bank Tempat Pembayaran, terhadap pemberlakuan kerahasiaan data wajib pajak pada Undang Undang Nomor 6 Tahun 1983 tentang Ketentuan Umum dan Tata Cara Perpajakan sebagaimana diubah terakhir dengan Undang Undang Nomor 16 Tahun 2009.
 
 \section{PERSIAPAN PENGUMPULAN FAKTA}
 
