--- a/00.book.tex
+++ b/00.book.tex
@@ -99,24 +99,14 @@ Priyanto Tamami, S.Kom.
 \section{PEMBENTUKAN LINGKUP SISTEM}
 
 
-\section{PERSIAPAN PENGUMPULAN FAKTA}
+\section{PENGUSULAN PERANGKAT LUNAK DAN PERANGKAT KERAS UNTUK SISTEM BARU}
 
-Dalam pengumpulan fakta pendukung studi kelayakan ini, karena dasarnya adalah kebutuhan organisasi terhadap sebuah ide, yaitu bagaimana cara yang efektif untuk melakukan pencatatannya sehingga data akan tersimpan untuk jangka waktu tertentu dan dapat dipelihara dengan mudah, serta dapat dilakukan perluasan terhadap informasi yang dapat diakses publik melalui internet, maka data yang dikumpulkan adalah wawancara dengan personal yang menangani langsung kegiatan pencatatan administrasi BPHTB, serta beberapa bahan mentah seperti apa data-data tersebut dicatatkan.
-%Dalam pengumpulan fakta pendukung studi kelayakan ini, karena dasarnya adalah kebutuhan organisasi terhadap beberapa ide dan melihat dari sisi hukum perpajakan yang berlaku, maka bentuknya adalah berupa survey internal mengenai setuju atau tidaknya membangun sebuah aplikasi sistem informasi status pembayaran Pajak Bumi dan Bangunan Perdesaan dan Perkotaan, serta dasar dasar hukum yang menyebutkan hal tentang kerahasiaan data wajib pajak.
 
-\section{PENENTUAN JADWAL WAKTU}
+\section{PEMBUATAN ANALISIS UNTUK MEMBUAT ATAU MEMBELI APLIKASI}
 
-Penentuan jadwal waktu adalah sebagaimana tertera pada grafik gantt berikut ini :
 
-\begin{figure}[H]
-  \centering
-  \includegraphics[width=0.7\textwidth]{./resources/jadwal-studi-kelayakan}
-  \caption{Jadwal Waktu Studi Kelayakan}
-\end{figure}
+\section{PEMBUATAN ANALISIS BIAYA/MANFAAT}
 
-\section{CAKUPAN KEGIATAN}
-
-Cakupan kegiatan pada studi kelayakan ini hanya melakukan wawancara dan penelitian bahan yang menjadi produk dari catatan administrasi yang dilakukan oleh fungsi pelayanan BPHTB, sehingga nantinya dapat disimpulkan apakah perlu atau tidaknya aplikasi berbentuk web dibangun.
 
 \section{TENAGA DAN BIAYA YANG DIPERLUKAN UNTUK STUDI KELAYAKAN}
 
