penambahan materi peluang aplikasi

--- a/00.book.tex
+++ b/00.book.tex
@@ -89,6 +89,26 @@ Priyanto Tamami, S.Kom.
 
 \section{PENENTUAN MASALAH DAN PELUANG YANG DITUJU SISTEM}
 
+\subsection{Penentuan Masalah}
+
+Kondisi yang dilakukan sekarang dalam pencatatan administrasi Bea Perolehan Hak atas Tanah dan/atau Bangunan (BPHTB) dilakukan dengan menggunakan aplikasi Microsoft Office Excel.
+
+Kondisi demikian menjadikan data tersebar pada komputer personal yang menangani pelayanan dan \textit{entry} data BPHTB sehingga data tidak dapat diakses bersama-sama, baik dalam \textit{entry} datanya, maupun dalam menyajikan informasi hasilnya, sekalipun dapat diakses bersama, maka dalam pengerjaannya akan muncul permasalahan teknis yang berkaitan dengan 
+
+Beberapa hal yang menjadi masalah yang ditimbulkan dari data tersebar ini adalah apabila ada kerusakan pada personal komputer yang menangani pelayanan dan \textit{entry} data BPHTB, maka seluruh data harus dipindah ke personal komputer yang lain apabila memungkinkan, bila kerusakan yang terjadi ada pada \textit{harddisk} komputer yang bersangkutan, maka data yang tersimpan akan rusak.
+
+Kondisi permasalahan lain yang ditemukan dalam pencatatan manual adalah data Objek Pajak untuk Pajak Bumi dan Bangunan Perdesaan dan Perkotaan (PBB-P2) berbentuk \textit{file} Microsoft Office Excel yang diekspor dari basis data SISMIOP yang ukurannya cukup besar, sehingga pada saat diakses dari aplikasi Microsoft Office Excel memerlukan waktu yang cukup lama.
+
+\textit{File} Objek Pajak PBB-P2 yang berbentuk Microsoft Office Excel diperlukan guna menampilkan informasi Nilai Jual Objek Pajak (NJOP) yang nantinya akan menjadi nilai pembanding terhadap nilai transaksi atau nilai peralihan yang dilaporkan oleh masyarakat wajib pajak.
+
+Data objek pajak PBB-P2 ini pun akan tidak terlihat perubahannya apabila data yang diminta telah dilakukan perubahan oleh SISMIOP karena pengambilan data NJOP dilakukan satu kali dalam satu tahun yaitu diawal tahun setelah fase penetapan PBB-P2 dilakukan.
+
+\subsection{Peluang Yang Dituju}
+
+Dari beberapa permasalahan yang timbul pada sistem pencatatan administrasi secara manual di atas, peluang yang ditawarkan sistem aplikasi web yang baru yaitu data nantinya akan disimpan di \textit{server}. Sehingga dengan aplikasi yang dibangun, data dapat diakses bersama bahkan dapat dilakukan \textit{entry} bersama.
+
+Pada saat pengambilan data NJOP PBB-P2, dilakukan secara langsung pada basis data SISMIOP, sehingga perubahan-perubahan yang dilakukan pada saat itu, dapat langsung diterima sebagai nilai pembanding pada perolehan BPHTB.
+
 
 \section{PEMBENTUKAN SASARAN SISTEM BARU SECARA KESELURUHAN}
 
@@ -108,8 +128,10 @@ Priyanto Tamami, S.Kom.
 \section{PEMBUATAN ANALISIS BIAYA/MANFAAT}
 
 
-\section{TENAGA DAN BIAYA YANG DIPERLUKAN UNTUK STUDI KELAYAKAN}
+\section{PENGKAJIAN TERHADAP RESIKO PROYEK}
 
-Tenaga yang diperlukan untuk studi kelayakan ini hanya 1 (satu) orang fungsional Pranata Komputer sebagai pewawancara dan pengolah data administrasi manual.
+
+\section{PEMBERIAN REKOMENDASI UNTUK MENERUSKAN ATAU MENGHENTIKAN PROYEK}
+
 
 \end{document}
