--- a/00.book.tex
+++ b/00.book.tex
@@ -109,8 +109,12 @@ Dari beberapa permasalahan yang timbul pada sistem pencatatan administrasi secar
 
 Pada saat pengambilan data NJOP PBB-P2, dilakukan secara langsung pada basis data SISMIOP, sehingga perubahan-perubahan yang dilakukan pada saat itu, dapat langsung diterima sebagai nilai pembanding pada perolehan BPHTB.
 
+Pengamanan terhadap data pun dilakukan di server dengan menggunakan sistem \textit{array harddisk} dimana setiap \textit{harddisk} yang terpasang, dilakukan redundansi data untuk tiap 2 (dua) keping \textit{harddisk} yang dilakukan secara otomatis melalui \textit{controller} sehingga apabila ada kerusakan di salah satu \textit{hardisk} maka \textit{harddisk} yang lain akan menggantikannya tanpa cacat sedikit pun.
+
 
 \section{PEMBENTUKAN SASARAN SISTEM BARU SECARA KESELURUHAN}
+
+
 
 
 \section{PENGIDENTIFIKASIAN PARA PEMAKAI SISTEM}
