--- a/00.book.tex
+++ b/00.book.tex
@@ -151,8 +151,62 @@ Dari sisi layanan sebetulnya kearah layanan jasa, apakah kita akan menggunakan s
 
 Atau dengan pertimbangan lain adalah membuat aplikasi sendiri karena kita memiliki seorang fungional Pranata Komputer yang tugas pokok dan fungsinya memang dapat membangun suatu sistem aplikasi, tanpa mengeluarkan biaya tambahan yang biasanya cukup besar, namun tentunya waktu yang dibutuhkan lebih lama dari membeli aplikasi.
 
-%\section{PEMBUATAN ANALISIS BIAYA/MANFAAT}
+\section{PEMBUATAN ANALISIS BIAYA/MANFAAT}
 
+Pengembangan sistem informasi seperti ini merupakan suatu investasi seperti halnya investasi proyek lainnya. Investasi berarti dikeluarkannya sumber-sumber daya untuk mendapatkan manfaat dimasa mendatang. Investasi untuk pengembangan sistem informasi juga membutuhkan sumber-sumber daya. Sebagai hasilnya, sistem informasi akan memberikan manfaat-manfaat yang dapat berupa penghematan-penghematan atau manfaat-manfaat yang baru.
+
+Jika manfaat yang diharapkan lebih kecil dari sumber daya yang dikeluarkan, maka sistem informasi ini dikatakan tidak bernilai atau tidak layak.
+
+\textbf{KOMPONEN BIAYA}
+
+Ada dua komponen yang diperlukan untuk melakukan analisis biaya / efektivitas yakni :
+
+\begin{enumerate}[1.]
+  \item Komponen Biaya
+  \item Komponen Efektivitas
+\end{enumerate}
+
+Biaya yang berhubungan dengan pengembangan sistem informasi dapat diklasifikasikan ke dalam 4 kategori utama, yaitu :
+
+\begin{enumerate}[1.]
+  \item Biaya pengadaan
+
+Adalah semua biaya yang terjadi sehubungan dengan memperoleh perangkat keras. Yang termasuk biaya pengadaan sistem ini, karena seluruh perangkat keras menggunakan perangkat yang sudah ada sehingga biaya untuk pengadaan boleh dikatakan nihil.
+  
+  \item Biaya persiapan operasi
+  
+Adalah semua biaya untuk membuat sistem siap untuk dioperasikan. Untuk biaya persiapan operasi, karena menggunakan perangkat lunak yang berbasis \textit{free} dan \textit{open source}, kemudian dari sisi jaringan baik lokal maupun internet sudah terbangun sehingga biaya persiapan operasi pun bisa dikatakan nihil.
+
+  \item Biaya proyek
+
+Adalah semua biaya yang dikeluarkan untuk pengembangan sistem termasuk penerapannya. Yang termasuk diantaranya adalah biaya dalam tahap analisis sistem, biaya dalam tahap design sistem, dan biaya dalam tahap penerapan sistem. Tentunya bila menggunakan pihak lain untuk membangun aplikasi, akan muncul biaya-biaya tersebut, tetapi untuk dapat meningkatkan sisi manfaatnya, seorang fungsional pranata komputer pun dapat melakukan ketiga tahapan tersebut dengan tugas pokok dan fungsinya sebagai seorang fungsional pranata komputer, sehingga biaya proyek ini menjadi nihil.
+  
+  \item Biaya operasi dan biaya perawatan 
+  
+Adalah biaya-biaya yang dikeluarkan untuk mengoperasikan sistem supaya sistem dapat beroperasi. Karena menggunakan sistem perangkat keras yang sudah beroperasi, maka baik biaya-biaya pemakaian seperti listri, telepon, dan biaya rutin akan sama besarnya seperti sebelum menggunakan sistem aplikasi yang akan dibangun. Biaya-biaya personil pun melihat aplikasinya akan dibangun berdasarkan sistem alur bisnis yang sudah berjalan, maka tidak ada biaya tambahan yang lain. 
+
+Dari sisi perawatan, baik perangkat lunak dan perangkat keras pun, cukup dilakukan oleh fungsional pranata komputer sesuai tugas pokok dan fungsinya. Dapat disimpulkan bahwa biaya operasi dan biaya perawatan tidak akan mengalami kenaikan seperti pada saat melakukan pencatatan administrasi secara manual.
+
+\end{enumerate}
+
+\textbf{KOMPONEN MANFAAT}
+
+Manfaat yang didapat dari sistem informasi yang akan dibangun dapat diklasifikasi sebagai berikut :
+
+\begin{enumerate}[1.]
+  \item Manfaat mengurangi kesalahan-kesalahan
+  
+Dilihat dari sistem manual yang melakukan entry data secara manual, maka dimungkinkan akan terdapat kesalahan pada saat entry karena tidak adanya kontrol verifikasi. Dengan dibangunnya sistem ini, nantinya tiap bagian entry data akan dikontrol dan langsung diambilkan dari sumber datanya secara \textit{real time}
+
+  \item Manfaat meningkatkan kecepatan aktivitas
+  
+Dari beberapa formulir yang diperlukan untuk \textit{entry} data yang terdiri dari beberapa lembar berkas, maka dengan dibangunnya sistem ini, data-data yang redundan (yang sama) tidak perlu dimasukkan beberapa kali, bahkan dengan memasukkan informasi inti tentang objek pajak seperti Nomor Objek Pajak (NOP) seluruh data yang berkaitan dengan objek pajak dapat diambilkan langsung oleh sistem dari basis data SISMIOP.
+
+  \item Manfaat meningkatkan perencanaan dan pengendalian manajemen.
+  
+Dengan beberapa modul tambahan dimungkinkan untuk memberikan laporan-laporan statistik sebagai bahan untuk pengambilan keputusan, seperti berapa realisasi yang sudah tercapai sampai dengan hari ini, atau berapa jumlah berkas pelayanan yang tertunda, apa saja kendalanya sehingga dapat diselesaikan dengan cepat.
+
+\end{enumerate}
 
 \section{PENGKAJIAN TERHADAP RESIKO PROYEK}
 
@@ -164,5 +218,6 @@ Resiko yang lain yang mungkin timbul adalah Hazard Risk, atau resiko terkait kec
 
 \section{PEMBERIAN REKOMENDASI UNTUK MENERUSKAN ATAU MENGHENTIKAN PROYEK}
 
+Rekomendasi yang dapat diusulkan dengan melihat beberapa pertimbangan diatas yaitu meneruskan kegiatan proyek yang dikerjakan mandiri atau dibuat sendiri oleh seorang pranata komputer. Selain akan meningkatkan manfaat dari aplikasi yang dibuat 
 
 \end{document}
