--- a/00.book.tex
+++ b/00.book.tex
@@ -208,6 +208,8 @@ Dengan beberapa modul tambahan dimungkinkan untuk memberikan laporan-laporan sta
 
 \end{enumerate}
 
+Dari beberapa manfaat diatas, semuanya berada pada sisi keuntungan tidak berujud sehingga sulit untuk dilakukan dalam satuan nilai uang. Sehingga cukup dikatakan bahwa dengan dibangunnya sistem aplikasi tersebut, akan memberikan beberapa manfaat tambahan dari pencatatan administrasi yang dilakukan secara manual.
+
 \section{PENGKAJIAN TERHADAP RESIKO PROYEK}
 
 Tentu saja untuk setiap proyek yang berjalan pasti memiliki resiko, yang apabila dapat ditangani dengan benar, bisa menjadi nilai tambah tersendiri terhadap proyek yang akan berlangsung.
@@ -218,6 +220,6 @@ Resiko yang lain yang mungkin timbul adalah Hazard Risk, atau resiko terkait kec
 
 \section{PEMBERIAN REKOMENDASI UNTUK MENERUSKAN ATAU MENGHENTIKAN PROYEK}
 
-Rekomendasi yang dapat diusulkan dengan melihat beberapa pertimbangan diatas yaitu meneruskan kegiatan proyek yang dikerjakan mandiri atau dibuat sendiri oleh seorang pranata komputer. Selain akan meningkatkan manfaat dari aplikasi yang dibuat 
+Rekomendasi yang dapat diusulkan dengan melihat beberapa pertimbangan diatas yaitu meneruskan kegiatan proyek yang dikerjakan mandiri atau dibuat sendiri oleh seorang pranata komputer. Selain akan meningkatkan manfaat dari aplikasi yang dibuat, tentunya untuk pengembangan kedepan dapat dijadikan sebagai sarana komunikasi dengan masyarakat wajib pajak, atau dapat pula digunakan sebagai kontrol manajemen dalam pengelolaan BPHTB di Kabupaten Brebes.
 
 \end{document}
