--- a/00.book.tex
+++ b/00.book.tex
@@ -42,7 +42,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{document}
-
+\sloppy
 %\author{Priyanto Tamami}
 %\title{BUKU PETUNJUK OPERASIONAL SISTEM INFORMASI GEOGRAFIS UNTUK PBB-P2 DENGAN MAPINFO VERSI 8.0}
 %\date{22 Desember 2015}
@@ -93,7 +93,7 @@ Priyanto Tamami, S.Kom.
 
 Kondisi yang dilakukan sekarang dalam pencatatan administrasi Bea Perolehan Hak atas Tanah dan/atau Bangunan (BPHTB) dilakukan dengan menggunakan aplikasi Microsoft Office Excel.
 
-Kondisi demikian menjadikan data tersebar pada komputer personal yang menangani pelayanan dan \textit{entry} data BPHTB sehingga data tidak dapat diakses bersama-sama, baik dalam \textit{entry} datanya, maupun dalam menyajikan informasi hasilnya, sekalipun dapat diakses bersama, maka dalam pengerjaannya akan muncul permasalahan teknis yang berkaitan dengan 
+Kondisi demikian menjadikan data tersebar pada komputer personal yang menangani pelayanan dan \textit{entry} data BPHTB sehingga data tidak dapat diakses bersama-sama, baik dalam \textit{entry} datanya, maupun dalam menyajikan informasi hasilnya, sekalipun dapat diakses bersama, maka dalam pengerjaannya akan muncul permasalahan teknis yang berkaitan dengan jaringan.
 
 Beberapa hal yang menjadi masalah yang ditimbulkan dari data tersebar ini adalah apabila ada kerusakan pada personal komputer yang menangani pelayanan dan \textit{entry} data BPHTB, maka seluruh data harus dipindah ke personal komputer yang lain apabila memungkinkan, bila kerusakan yang terjadi ada pada \textit{harddisk} komputer yang bersangkutan, maka data yang tersimpan akan rusak.
 
@@ -120,6 +120,10 @@ Sasaran yang akan dituju oleh sistem yang baru dibuat nantinya adalah yang utama
 Sistem yang baru harus mampu menyediakan data-data dari basis data SISMIOP secara \textit{real time} untuk keperluan data pembanding pada nilai peralihan BPHTB. 
 
 Sistem yang baru harus dapat memproduksi hasil keluaran sesuai seperti apa yang dilakukan pada pencatatan administrasi BPHTB secara manual. Hal ini diperlukan agar tidak ada perbedaan secara hasil keluaran, tetapi dapat mempercepat proses pencatatan.
+
+Selain hal pokok tersebut diatas, beberapa fungsi yang melekat nantinya adalah halaman informasi terpisah untuk dapat diakses oleh publik dalam hal ini adalah masyarakat wajib pajak atau kuasanya, yang difungsikan untuk melacak apakah berkas pengajuan pelayanan yang pernah diserahkan ke DPPK Kabupaten Brebes statusnya sudah dapat diambil kembali (status berkas selesai) atau ada kendala lain seperti pengecekan lapangan atau kekurangan persyaratan berkas yang belum dilengkapi.
+
+Fungsi tambahan lain yang melekat adalah adanya statistik yang dapat menyajikan informasi berapa jumlah data peralihan yang terjadi untuk periode tanggal tertentu. Yang sebetulnya dalam perkembangan pengolahan data BPHTB dapat diperluas untuk menyajikan informasi data statistik apapun dalam rangka memberikan data atau informasi bagi pemegang kebijakan untuk melakukan kontrol dan evaluasi.
 
 \section{PENGIDENTIFIKASIAN PARA PEMAKAI SISTEM}
 
